syntax = "proto3";

package game.dto;

option java_multiple_files = true;
option java_package = "com.nekgamebling.game.dto";

import "dto/common.dto.proto";

// ============================================
// DOMAIN EVENT DTOs
// ============================================

// Session opened event
message SessionOpenedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string session_id = 3;                  // UUID as string
  string game_id = 4;                     // UUID as string
  string player_id = 5;                   // Player identifier
  string currency = 6;                    // Currency code
}

// Bet placed event
message BetPlacedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string session_id = 3;                  // UUID as string
  string round_id = 4;                    // UUID as string
  string spin_id = 5;                     // UUID as string
  string amount = 6;                      // BigInteger as string
  string real_amount = 7;                 // BigInteger as string
  string bonus_amount = 8;                // BigInteger as string
  string player_id = 9;                   // Player identifier
  string currency = 10;                   // Currency code
  optional string free_spin_id = 11;      // Free spin ID (nullable)
}

// Bet settled event
message BetSettledEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string session_id = 3;                  // UUID as string
  string round_id = 4;                    // UUID as string
  string spin_id = 5;                     // UUID as string
  string bet_amount = 6;                  // BigInteger as string
  string win_amount = 7;                  // BigInteger as string
  string player_id = 8;                   // Player identifier
  string currency = 9;                    // Currency code
  optional string free_spin_id = 10;      // Free spin ID (nullable)
  bool is_win = 11;                       // Win status
}

// Bet rolled back event
message BetRolledBackEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string session_id = 3;                  // UUID as string
  string round_id = 4;                    // UUID as string
  string spin_id = 5;                     // UUID as string
  string original_spin_id = 6;            // UUID as string
  string player_id = 7;                   // Player identifier
}

// Round finished event
message RoundFinishedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string session_id = 3;                  // UUID as string
  string round_id = 4;                    // UUID as string
}

// Game created event
message GameCreatedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
  string identity = 4;                    // Game identity
  string name = 5;                        // Game name
  string provider_id = 6;                 // UUID as string
}

// Game activated event
message GameActivatedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
}

// Game deactivated event
message GameDeactivatedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
}

// Game tag added event
message GameTagAddedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
  string tag = 4;                         // Tag value
}

// Game tag removed event
message GameTagRemovedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
  string tag = 4;                         // Tag value
}

// Game images updated event
message GameImagesUpdatedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
  ImageMapDto images = 4;                 // Updated images
}

// Game bonus config updated event
message GameBonusConfigUpdatedEventDto {
  string event_id = 1;                    // UUID as string
  int64 occurred_at = 2;                  // Epoch millis
  string game_id = 3;                     // UUID as string
  bool bonus_bet_enable = 4;              // Bonus bet enabled
  bool bonus_wagering_enable = 5;         // Bonus wagering enabled
}
